# hermitclaw-tarnbox

./: .gitignore  Modelfile  README.md  config.yaml  pyproject.toml  start.sh  watch.py
frontend/src/: App.tsx
hermitclaw/: brain.py  config.py  identity.py  main.py  memory.py  prompts.py  providers.py  server.py  tools.py
